// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todo item completed should match snapshot 1`] = `
<div
  className="App__todo-list__item"
>
  <div
    className="hstack gap-3"
  >
    <div>
      <div
        className="App__todo-list__item-title--completed"
      >
        Task 1
      </div>
      <div
        className="App__todo-list__item-description--compleated"
      >
        <span>
          Description 1
        </span>
        <span>
           Fri May 05 2023 
        </span>
      </div>
    </div>
    <button
      className="ms-auto btn btn-outline-secondary btn-sm"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Complete
    </button>
    <button
      className="btn btn-outline-danger btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`todo item uncompleted should match snapshot 1`] = `
<div
  className="App__todo-list__item"
>
  <div
    className="hstack gap-3"
  >
    <div>
      <div
        className="App__todo-list__item-title"
      >
        Task 1
      </div>
      <div
        className="App__todo-list__item-description"
      >
        <span>
          Description 1
        </span>
        <span>
           Fri May 05 2023 
        </span>
      </div>
    </div>
    <button
      className="ms-auto btn btn-outline-success btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Complete
    </button>
    <button
      className="btn btn-outline-danger btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;
